
Thu Nov 27 18:30:42 CET 2003 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.h, mini-ppc.c: handle some different ABI call convention issues.

2003-11-27  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions-x86.c: Fix stack space leaks.
	
	* exceptions-x86.c (mono_arch_find_jit_info): Restore callee saved
	registers from the lmf if the method has save_lmf set.

2003-11-26  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-x86.c (x86_magic_trampoline): Avoid patching in the addresses
	of icall wrappers into InvokeInDomain, since these are now per-domain.

Wed Nov 26 20:15:04 CET 2003 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.h, mini-x86.h, mini.c, inssel-ppc.brg, jit-icalls.c:
	make some opcode emulation and intrinsic ops enabled/disabled 
	according to the architecture. More fixes.

Wed Nov 26 19:59:09 CET 2003 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c, mini-sparc.c, cpu-g4.md: more bug fixes.

Wed Nov 26 19:18:29 CET 2003 Paolo Molaro <lupus@ximian.com>

	* mini.h, inssel.brg, mini-x86.c, mini-ppc.c, mini-sparc.c: move
	arch-specific handling for 'this' and struct return type to
	arch-specific code.

2003-11-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* aot.c: prevent divide by zero error when reporting (it happened with
	Accessibility.dll).

2003-11-25  Zoltan Varga  <vargaz@freemail.hu>

	* mini.h (inst_switch): Remove unused macro.

2003-11-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* aot.c:
	(load_aot_module): free 'info->methods' and 'info' properly. No more
	"free(): invalid pointer blah" messages when you have an old aot
	compiled assembly.

2003-11-21  Lluis Sanchez Gual <lluis@ximian.com>

	* jit-icalls.c, mini.c: Added support for context static fields.

2003-11-18  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_method_blittable): Methods which set LastError are not 
	blittable either. Fixes #51108.
	
Tue Nov 18 16:41:37 CET 2003 Paolo Molaro <lupus@ximian.com>

	* mini.c: flush icache.